--- a/products.html
+++ b/products.html
@@ -1109,9 +1109,30 @@
 
   </div>
 </div>
+
+<div class="backdrop backdrop__mobile is-hidden">
+  <div class="menu__modal">
+    <button class="mobile__button-close modal-close">
+      <svg width="30" height="30">
+        <use href="./images/symbol-defs.svg#icon-close"></use>
+      </svg>
+     </button>
+    <ul class="nav__list-mobile">
+      <li class="list"><a href="./index.html" class="link menu__link text">Головна</a></li>
+      <li class="list"><a href="./about.html" class="link menu__link text">Про нас</a></li>
+      <li class="list"><a href="./products.html" class="link menu__link text">Продукція</a></li>
+      <li class="list"><a href="./partner.html" class="link menu__link text">Партнерам</a></li>
+      <li class="list"><a href="./contacts.html" class="link menu__link text">Контакти</a></li>
+  </ul>
+  <button type="button" class="button__primary menu__button button__form modal-open">Отримати пропозицію</button>
+
+  </div>
+  
+</div>
 <script type="module" src="./js/tabs.js"></script>
 <script type="module" src="./js/header-active-page.js"></script>
 <script type="module" src="./js/button-form.js"></script>
 <script type="module" src="./js/form-button-send.js"></script>
+<script type="module" src="./js/header-menu.js"></script>
 </body>
 </html>
