--- a/contacts.html
+++ b/contacts.html
@@ -57,19 +57,19 @@
             <svg class="footer__icon" width="18" height="18">
               <use href="./images/symbol-defs.svg#icon-phone"></use>
             </svg>
-            <a class="link text white" href="">+38 (066) 74 72 803</a>
+            <a class="link text white" href="tel:+380667472803">+38 (066) 74 72 803</a>
           </li>
           <li class="list contacts__list">
             <svg class="footer__icon"  width="18" height="18">
               <use href="./images/symbol-defs.svg#icon-phone"></use>
             </svg>
-            <a class="link text white" href="">+38 (096) 08 97 803</a>
+            <a class="link text white" href="tel:+380960897897">+38 (096) 08 97 987</a>
           </li>
           <li class="list contacts__list">
             <svg class="footer__icon"  width="18" height="18">
               <use href="./images/symbol-defs.svg#icon-mail"></use>
             </svg>
-            <a class="link text white" href="">office.apero@gmail.com</a>
+            <a class="link text white" href="mailto:office.apero@gmail.com">office.apero@gmail.com</a>
           </li>
         </ul>
         <svg class="contacts__icon" >
@@ -83,13 +83,13 @@
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-phone-small-black"></use>
             </svg>
-            <a class="link text" href="">+38 (067) 21 08 932 Дмитро</a>
+            <a class="link text" href="tel:+380672108932">+38 (067) 21 08 932 Дмитро</a>
           </li>
           <li class="list contacts__list">
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-mail-black"></use>
             </svg>
-            <a class="link text" href="">provision.apero@gmail.com</a>
+            <a class="link text" href="mailto:provision.apero@gmail.com">provision.apero@gmail.com</a>
           </li>
         </ul>
         <svg class="contacts__icon">
@@ -103,13 +103,13 @@
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-phone-small-black"></use>
             </svg>
-            <a class="link text" href="">+38 (050) 76 59 008 Віктор</a>
+            <a class="link text" href="tel:+380507659008">+38 (050) 76 59 008 Віктор</a>
           </li>
           <li class="list contacts__list">
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-mail-black"></use>
             </svg>
-            <a class="link text" href="">sales.apero@gmail.com</a>
+            <a class="link text" href="mailto:sales.apero@gmail.com">sales.apero@gmail.com</a>
           </li>
         </ul>
         <svg class="contacts__icon" >
@@ -123,13 +123,13 @@
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-phone-small-black"></use>
             </svg>
-            <a class="link text" href="">+38 (096) 84 55 513 Андрій</a>
+            <a class="link text" href="tel:+380968455513">+38 (096) 84 55 513 Андрій</a>
           </li>
           <li class="list contacts__list">
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-mail-black"></use>
             </svg>
-            <a class="link text" href="">export.apero@gmail.com</a>
+            <a class="link text" href="mailto:export.apero@gmail.com">export.apero@gmail.com</a>
           </li>
         </ul>
         <svg class="contacts__icon" >
@@ -180,7 +180,7 @@
           <svg class="footer__icon" width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-mail"></use>
           </svg>
-          <a class="link text white" href="">office.apero@gmail.com</a>
+          <a class="link text white" href="mailto:office.apero@gmail.com">office.apero@gmail.com</a>
         </li>
       </ul>
 
@@ -189,13 +189,13 @@
           <svg class="footer__icon" width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-phone"></use>
           </svg>
-          <a class="link text white" href="">+38 (066) 74 72 803</a>
+          <a class="link text white" href="tel:+380667472803">+38 (066) 74 72 803</a>
         </li>
         <li class="list footer__information-list">
           <svg class="footer__icon" width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-phone"></use>
           </svg>
-          <a class="link text white" href="">+38 (096) 08 97 803</a>
+          <a class="link text white" href="tel:+380960897897">+38 (096) 08 97 987</a>
         </li>
       </ul>
 
