--- a/partner.html
+++ b/partner.html
@@ -184,7 +184,7 @@
           <svg class="footer__icon" width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-mail"></use>
           </svg>
-          <a class="link text white" href="">office.apero@gmail.com</a>
+          <a class="link text white" href="mailto:office.apero@gmail.com">office.apero@gmail.com</a>
         </li>
       </ul>
 
@@ -193,13 +193,13 @@
           <svg class="footer__icon" width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-phone"></use>
           </svg>
-          <a class="link text white" href="">+38 (066) 74 72 803</a>
+          <a class="link text white" href="tel:+380667472803">+38 (066) 74 72 803</a>
         </li>
         <li class="list footer__information-list">
           <svg class="footer__icon" width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-phone"></use>
           </svg>
-          <a class="link text white" href="">+38 (096) 08 97 803</a>
+          <a class="link text white" href="tel:+380960897897">+38 (096) 08 97 987</a>
         </li>
       </ul>
 
