--- a/products.html
+++ b/products.html
@@ -1044,7 +1044,7 @@
           <svg class="footer__icon" width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-mail"></use>
           </svg>
-          <a class="link text white" href="">office.apero@gmail.com</a>
+          <a class="link text white" href="mailto:office.apero@gmail.com">office.apero@gmail.com</a>
         </li>
       </ul>
 
@@ -1053,13 +1053,13 @@
           <svg class="footer__icon" width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-phone"></use>
           </svg>
-          <a class="link text white" href="">+38 (066) 74 72 803</a>
+          <a class="link text white" href="tel:+380667472803">+38 (066) 74 72 803</a>
         </li>
         <li class="list footer__information-list">
           <svg class="footer__icon" width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-phone"></use>
           </svg>
-          <a class="link text white" href="">+38 (096) 08 97 803</a>
+          <a class="link text white" href="tel:+380960897897">+38 (096) 08 97 987</a>
         </li>
       </ul>
 
