active page mobile menu

--- a/about.html
+++ b/about.html
@@ -332,7 +332,7 @@
 
     <section class="container container__blue">
       <div class="question__container">
-        <img src="./images/question_popcorn.png" alt="popcorn salt" class="question_image-popcorn">
+        <!-- <img src="./images/question_popcorn.png" alt="popcorn salt" class="question_image-popcorn"> -->
         <form name="question-form" class="question__form" action="https://formspree.io/f/xvoedapk" method="POST"> 
          <h2 class="title question__title">маєте запитання чи </br>пропозиції?</h2>
          <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
@@ -478,6 +478,7 @@
 <script type="module" src="./js/button-form.js"></script>
 <script type="module" src="./js/form-button-send.js"></script>
 <script type="module" src="./js/header-menu.js"></script>
+<script type="module" src="./js/active-page-mob-menu.js"></script>
 
 </body>
 </html>
