--- a/index.html
+++ b/index.html
@@ -194,8 +194,9 @@
         <div class="collection__block collection__block-blue">
           <div class="collection__block-text">
             <h4 class="collection__subtitle">Сухарики в асортименті</h4>
+            <button class="section__link collection__link" onclick="window.location.href='./products.html'">Дізнатися більше</button>
             <p class="text collection__text collection__text-small">Лінійка суриків з різними  смаками - це гастрономічна насолода з кожним  хрустом. Тільки відбірна сировина, 0% консервантів та натуральні спеції</p>
-            <a href="./products.html" class="section__link collection__link">Дізнатися більше</a>
+            <!-- <a href="./products.html" class="section__link collection__link">Дізнатися більше</a> -->
             <div class="collection-link-underline"></div>
           </div>
 
@@ -225,7 +226,8 @@
             <div class="collection__block-text collection__block-text-small">
               <h4 class="collection__subtitle">Кукурудзяні палички</h4>
               <p class="text collection__text collection__text-small">Дві лінійки смачних кукурудзяних </br>паличок: класичні з ексклюзивним</br> апельсиновим смаком та кукурудзяні </br>палички з сюрпризом всередині.</p>
-              <a href="./products.html" class="section__link collection__link">Дізнатися більше</a>
+              <button class="section__link collection__link" onclick="window.location.href='./products.html'">Дізнатися більше</button>
+              <!-- <a href="./products.html" class="section__link collection__link">Дізнатися більше</a> -->
               <div class=""></div>
             </div>
             <picture>
@@ -246,7 +248,8 @@
             <div class="collection__block-text collection__block-text-small">
               <h4 class="collection__subtitle">Кукурудзяні подушечки</h4>
               <p class="text collection__text collection__text-small">Солодкі трубочки та подушечки з </br> начинкою - 100% натуральні</br> інгредієнти. Стильна пачка,</br> європейська якість!</p>
-              <a href="./products.html" class="section__link  collection__link">Дізнатися більше</a>
+              <button class="section__link collection__link" onclick="window.location.href='./products.html'">Дізнатися більше</button>
+              <!-- <a href="./products.html" class="section__link  collection__link">Дізнатися більше</a> -->
               <div class=""></div>
             </div>
             <picture>
@@ -276,7 +279,8 @@
           <div class="collection__block-text">
             <h4 class="collection__subtitle">Попкорн</h4>
             <p class="text collection__text collection__text-small">Не залишить байдужим навіть найвибагливіших </br> гурманів. Насолода гарантована, так як для </br> виробництва використовуються найкращі </br> кукурудзяні зерна</p>
-            <a href="./products.html" class="section__link collection__link">Дізнатися більше</a>
+            
+            <button class="section__link collection__link" onclick="window.location.href='./products.html'">Дізнатися більше</button><!-- <a href="./products.html" class="section__link collection__link">Дізнатися більше</a> -->
             <div class="collection-link-underline"></div>
             <picture>
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732222510/apero/collection/collection-desktop/collection-classic-desktop-1x-min_tla60v.png 1x,
@@ -651,5 +655,6 @@
    <script type="module" src="./js/button-form.js"></script>
    <script type="module" src="./js/form-button-send.js"></script>
    <script type="module" src="./js/header-menu.js"></script>
+   <script type="module" src="./js/active-page-mob-menu.js"></script>
   </body>
 </html>
