--- a/partner.html
+++ b/partner.html
@@ -275,5 +275,7 @@
 <script type="module" src="./js/form-button-send.js"></script>
 <script type="module" src="./js/button-form.js"></script>
 <script type="module" src="./js/header-menu.js"></script>
+<script type="module" src="./js/active-page-mob-menu.js"></script>
+
 </body>
 </html>
