--- a/products.html
+++ b/products.html
@@ -1163,6 +1163,6 @@
 <script type="module" src="./js/form-button-send.js"></script>
 <script type="module" src="./js/header-menu.js"></script>
 <script type="module" src="./js/active-page-mob-menu.js"></script>
-
+<script type="module" src="./js/filter-main-page.js"></script>
 </body>
 </html>
