--- a/index.html
+++ b/index.html
@@ -374,13 +374,13 @@
               <div class="statistic__block statistic__block-white">
                 <p class="statistic__block-number text statistic__white">04</p>
                 <p class="statistic__block-info statistic__white">16</p>
-                <p class="statistic__block-number text statistic__block-text statistic__white">областей України </br>вже смакують нашу продукцію</p> 
+                <p class="statistic__block-number text statistic__block-text statistic__white">областей України вже смакують нашу продукцію</p> 
                </div>
             </div> 
 
             <div class="statistic__block-third">
-              <h2 class="title statistic__title">аперо - це <span class="statistic__title-orange">українська душа</span>  та європейська </br>якість</h2>
-              <p class="text statistic__text">Для виробничих процесів використовується сучасне імпортне обладнання.</br> Цілодобовий контроль якості, ефективний моніторинг та менеджмент </br> дозволяють компанії бути на крок попереду конкурентів та реалізовувати </br> великі об’єми харчових продуктів власного виробництва!</p>
+              <h2 class="title statistic__title">аперо - це <span class="statistic__title-orange">українська душа</span>  та європейська якість</h2>
+              <p class="text statistic__text">Для виробничих процесів використовується сучасне імпортне обладнання. Цілодобовий контроль якості, ефективний моніторинг та менеджмент дозволяють компанії бути на крок попереду конкурентів та реалізовувати великі об’єми харчових продуктів власного виробництва!</p>
               <a href="./about.html" class="section__link statistic__link">Дізнатися більше</a> 
             </div>
      </section>
@@ -494,7 +494,7 @@
         <!-- <img src="./images/question_popcorn.png" alt="popcorn salt" class="question_image-popcorn"> -->
         <!-- //цей сервіс для відправки заявок, потрібно переєструвати на електронну адресу когось із отримувачів Аперо -->
         <form name="question-form" class="question__form" action="https://formspree.io/f/xvoedapk" method="POST"> 
-         <h2 class="title question__title">маєте запитання чи </br>пропозиції?</h2>
+         <h2 class="title question__title">маєте запитання чи пропозиції?</h2>
          <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
           <div class="question__form-container">
             <input class="question__input text black" type="text" name="name" id="name" placeholder="Ваше ім'я" required>
@@ -512,10 +512,10 @@
           <img class="question_image-popcorn" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/qustion-corn-desk-1x_pa5mli.png" alt="corn ready">
         </picture>
         <picture>
-          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/question-puds-desk-1x_mx36ne.png 1x,
-          https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/question-puds-desk-2x_fuepul.png 2x"
+          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1734728772/apero/collection/collection-desktop/Visualization_Milk_6_cawbod.png 1x,
+          https://res.cloudinary.com/ddtdtthqh/image/upload/v1734728773/apero/collection/collection-desktop/Visualization_Milk_6_2x_ze0b8i.png 2x"
           media="(min-width: 1360px)" />
-          <img class="question_image-milk" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/question-puds-desk-1x_mx36ne.png" alt="milk puds">
+          <img class="question_image-milk" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1734728772/apero/collection/collection-desktop/Visualization_Milk_6_cawbod.png" alt="milk puds">
         </picture>
     </section>
    </main>
@@ -541,7 +541,7 @@
               <svg class="footer__icon" width="24" height="24">
                 <use href="./images/symbol-defs.svg#icon-location"></use>
               </svg>
-              <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, </br> вул. Валерія Красняна, 60к</a>
+              <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, вул. Валерія Красняна, 60к</a>
             </li>
             <li class="list footer__information-list">
               <svg class="footer__icon" width="24" height="24">
