--- a/about.html
+++ b/about.html
@@ -18,7 +18,6 @@
   <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-  <!-- <header class="header-container"> -->
     <header class="header header__second">
       <a href="./index.html" class="link"> 
         <svg class="logo" width="80" height="24">
@@ -41,7 +40,6 @@
      </button>
       <button type="button" class="button__primary header__button-second modal-open">Отримати пропозицію</button>
 
-    <!-- </div> -->
  </header>
 
  <main>
@@ -60,14 +58,14 @@
         
           <div class="about__offer-container">
             <h3 class="about__offer-title">Що ми пропонуємо?</h3>
-            <p class="text about__offer-text">В нашому асортименті кукурудзяні вироби, </br> що не містять шкідливих консервантів,</br> барвників та підсолоджувачів</p>
+            <p class="text about__offer-text">В нашому асортименті кукурудзяні вироби, що не містять шкідливих консервантів, барвників та підсолоджувачів</p>
           </div>
         </div>
       </div>
     </section>
 
     <section class="container">
-      <h2 class="title statistic__title">Наша продукція – це <span class="statistic__title-orange">українська душа </span> та</br>європейська якість</h2>
+      <h2 class="title statistic__title">Наша продукція – це <span class="statistic__title-orange">українська душа </span> та європейська якість</h2>
           <div class="statistic__block-first">
              <div class="statistic__block">
               <p class="statistic__block-number text">01</p>
@@ -91,14 +89,12 @@
               <div class="statistic__block statistic__block-white">
                 <p class="statistic__block-number text statistic__white">04</p>
                 <p class="statistic__block-info statistic__white">16</p>
-                <p class="statistic__block-number text statistic__block-text statistic__white">областей України </br>вже смакують нашу продукцію</p> 
+                <p class="statistic__block-number text statistic__block-text statistic__white">областей України вже смакують нашу продукцію</p> 
                </div>
             </div> 
 
             <div class="statistic__block-third about__statistic-block">
-              <!-- <h2 class="title statistic__title">аперо - це <span class="statistic__title-orange">українська душа</span>  та європейська </br>якість</h2> -->
               <p class="text statistic__text">Для виробничих процесів ми використовуємо сучасне імпортне обладнання. Цілодобовий контроль якості, ефективний моніторинг та менеджмент дозволяють компанії бути на крок попереду конкурентів та реалізовувати великі об’єми харчових продуктів власного виробництва!</p>
-              <!-- <a href="#" class="section__link statistic__link">Дізнатися більше</a>  -->
             </div>
 
           </section>
@@ -106,10 +102,10 @@
             <picture>
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992941/apero/about/about-desktop-1x-min_vmy7mq.png 1x,
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992942/apero/about/about-desktop-2x-min_zeycna.png 2x" 
-              media="(min-width: 1440px)" />
+              media="(min-width: 1359px)" />
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992941/apero/about/about-tablet-1x-min_wh8kda.png 1x,
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992942/apero/about/about-tablet-2x-min_qumuhm.png 2x" 
-              media="(min-width: 744px) and (max-width: 1439px)" />
+              media="(min-width: 744px) and (max-width: 1359px)" />
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992941/apero/about/about-mob-1x-min_uf0dnt.png 1x,
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992941/apero/about/about-mob-2x-min_kmjg3p.png 2x" 
               media="(max-width: 743px)"/>
@@ -138,16 +134,15 @@
       <picture>
         <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992942/apero/about/baget-desktop-1x-min_arssx5.png 1x,
         https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992942/apero/about/baget-desktop-2x-min_sjj3y6.png 2x" 
-        media="(min-width: 1440px)" />
+        media="(min-width: 1359px)" />
         <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992943/apero/about/baget-tablet-1x-min_mntwlx.png 1x,
         https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992944/apero/about/baget-tablet-2x-min_v1e4of.png 2x" 
-        media="(min-width: 744px) and (max-width: 1439px)" />
+        media="(min-width: 744px) and (max-width: 1359px)" />
         <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992942/apero/about/baget-mob-1x-min_mplkgf.png 1x,
         https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992942/apero/about/baget-mob-2x-min_cloqs1.png 2x" 
         media="(max-width: 743px)"/>
        <img class="about__production-image"  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992942/apero/about/baget-mob-1x-min_mplkgf.png"  alt="production"  />
       </picture>
-      <!-- <img class="about__production-image" src="./images/about-baget.png" alt="snex" > -->
     </section>
     
     <section class="container__grey">
@@ -203,16 +198,15 @@
         <picture>
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992940/apero/about/about2-desktop-1x-min_b1ypln.png 1x,
           https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992941/apero/about/about2-desktop-2x-min_ywttb3.png 2x" 
-          media="(min-width: 1440px)" />
+          media="(min-width: 1359px)" />
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992941/apero/about/about2-tablet-1x-min_wumagu.png 1x,
           https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992941/apero/about/about2-tablet-2x-min_hvtowg.png 2x" 
-          media="(min-width: 744px) and (max-width: 1439px)" />
+          media="(min-width: 744px) and (max-width: 1359px)" />
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992940/apero/about/about2-mob-1x-min_pr3iav.png 1x,
           https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992941/apero/about/about2-mob-2x-min_of0h7a.png 2x" 
           media="(max-width: 743px)"/>
          <img class="image__description"  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992940/apero/about/about2-mob-1x-min_pr3iav.png"  alt="production"  />
         </picture>
-        <!-- <img class="image__description" src="./images/about-production.png" alt="production"> -->
       </div>
     </section>
 
@@ -238,10 +232,10 @@
        <picture>
         <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992944/apero/about/baget-white-desktop-1x-min_tctuyz.png 1x,
         https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992944/apero/about/baget-white-desktop-2x-min_vw3fae.png 2x" 
-        media="(min-width: 1440px)" />
+        media="(min-width: 1359px)" />
         <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733002254/apero/about/baget-white-tablet-1x-min_vathr6.png 1x,
         https://res.cloudinary.com/ddtdtthqh/image/upload/v1733002254/apero/about/baget-white-tablet-2x-min_ptk1pt.png 2x" 
-        media="(min-width: 744px) and (max-width: 1439px)" />
+        media="(min-width: 744px) and (max-width: 1359px)" />
         <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733002254/apero/about/baget-white-mob-1x-min_evd3wj.png 1x,
         https://res.cloudinary.com/ddtdtthqh/image/upload/v1733002254/apero/about/baget-white-mob-2x-min_gkxsew.png 2x" 
         media="(max-width: 743px)"/>
@@ -253,17 +247,17 @@
     </section>
 
     <section class="container">
-     <h2 class="title about__product-title">В нашому асортименті кукурудзяні </br>вироби, які <span class="orange">не містять</span> шкідливих</br> консервантів, барвників та </br>підсолоджувачів</h2>
+     <h2 class="title about__product-title">В нашому асортименті кукурудзяні вироби, які <span class="orange">не містять</span> шкідливих консервантів, барвників та підсолоджувачів</h2>
       <div class="about__product__block-first">
         <div class="about__product-block about__product__block-orange">
           <p class="about__product-text">попкорн</p>
           <picture>
             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992947/apero/about/corn-desktop-1x-min_smid3i.png 1x,
             https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992947/apero/about/corn-desktop-2x-min_ngoumh.png 2x" 
-            media="(min-width: 1440px)" />
+            media="(min-width: 1359px)" />
             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992948/apero/about/corn-tablet-1x-min_u0p11i.png 1x,
             https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992948/apero/about/corn-tablet-2x-min_yposmu.png 2x" 
-            media="(min-width: 744px) and (max-width: 1439px)" />
+            media="(min-width: 744px) and (max-width: 1359px)" />
             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992947/apero/about/corn-mob-1x-min_jatvho.png 1x,
             https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992947/apero/about/corn-mob-2x-min_p3jz3p.png 2x" 
             media="(max-width: 743px)"/>
@@ -276,10 +270,10 @@
           <picture>
             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733051732/apero/about/baget-crab-desktop-1x-min_jofdo0.png 1x,
             https://res.cloudinary.com/ddtdtthqh/image/upload/v1733051733/apero/about/baget-crab-desktop-2x-min_oiwiff.png 2x" 
-            media="(min-width: 1440px)" />
+            media="(min-width: 1359px)" />
             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733047832/apero/about/baget-crab-tablet-2x-min_dxkfib.png 1x,
             https://res.cloudinary.com/ddtdtthqh/image/upload/v1733047832/apero/about/baget-crab-tablet-1x-min_z2w81t.png 2x" 
-            media="(min-width: 744px) and (max-width: 1439px)" />
+            media="(min-width: 744px) and (max-width: 1359px)" />
             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733047832/apero/about/baget-crab-mob-2x-min_vmlznk.png 1x,
             https://res.cloudinary.com/ddtdtthqh/image/upload/v1733047832/apero/about/baget-crab-mob-1x-min_ccftos.png 2x" 
             media="(max-width: 743px)"/>
@@ -295,32 +289,30 @@
           <picture>
             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733051533/apero/about/corn-cheese-desktop-1x-min_ywrbgj.png 1x,
             https://res.cloudinary.com/ddtdtthqh/image/upload/v1733051534/apero/about/corn-cheese-desktop-2x-min_wtvrj7.png 2x" 
-            media="(min-width: 1440px)" />
+            media="(min-width: 1359px)" />
             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992946/apero/about/corn-cheese-tablet-1x-min_xxqcg6.png 1x,
             https://res.cloudinary.com/ddtdtthqh/image/upload/v1732992946/apero/about/corn-cheese-tablet-2x-min_iz0c4t.png 2x" 
-            media="(min-width: 744px) and (max-width: 1439px)" />
+            media="(min-width: 744px) and (max-width: 1359px)" />
             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733051144/apero/about/corn-cheese-mob-1x-min_a3q79m.png 1x,
             https://res.cloudinary.com/ddtdtthqh/image/upload/v1733051145/apero/about/corn-cheese-mob-2x-min_jvixlu.png 2x" 
             media="(max-width: 743px)"/>
            <img class="image__corn"  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733051144/apero/about/corn-cheese-mob-1x-min_a3q79m.png"  alt="production"  />
           </picture>
-          <!-- <img class="image__corn" src="./images/about-corn.png" alt="corn"> -->
         </div>
         <div class="about__product-block about__product__block-pink">
           <p class="about__product-text">подушечки та трубочки</p>
           <picture>
             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733049336/apero/about/twin-desktop-1x-min_r94gqe.png 1x,
             https://res.cloudinary.com/ddtdtthqh/image/upload/v1733049336/apero/about/twin-desktop-2x-min_pp1b2a.png 2x" 
-            media="(min-width: 1440px)" />
+            media="(min-width: 1359px)" />
             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733049336/apero/about/twin-tablet-1x-min_enyipt.png 1x,
             https://res.cloudinary.com/ddtdtthqh/image/upload/v1733049337/apero/about/twin-tablet-2x-min_nlgfqs.png 2x" 
-            media="(min-width: 744px) and (max-width: 1439px)" />
+            media="(min-width: 744px) and (max-width: 1359px)" />
             <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733049336/apero/about/twin-mob-1x-min_qmx87u.png 1x,
             https://res.cloudinary.com/ddtdtthqh/image/upload/v1733049336/apero/about/twin-mob-2x-min_cjgwvt.png 2x" 
             media="(max-width: 743px)"/>
            <img class="image__twin"  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733049336/apero/about/twin-mob-1x-min_qmx87u.png"  alt="production"  />
           </picture>
-          <!-- <img class="image__twin" src="./images/about-twin.png" alt="twin"> -->
         </div>   
       </div>
 
@@ -332,9 +324,8 @@
 
     <section class="container container__blue">
       <div class="question__container">
-        <!-- <img src="./images/question_popcorn.png" alt="popcorn salt" class="question_image-popcorn"> -->
         <form name="question-form" class="question__form" action="https://formspree.io/f/xvoedapk" method="POST"> 
-         <h2 class="title question__title">маєте запитання чи </br>пропозиції?</h2>
+         <h2 class="title question__title">маєте запитання чи пропозиції?</h2>
          <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
           <div class="question__form-container">
             <input class="question__input text" type="text" name="name" id="name" placeholder="Ваше ім'я" required>
@@ -348,17 +339,15 @@
         <picture>
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/qustion-corn-desk-1x_pa5mli.png 1x,
           https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292477/apero/questions/qustion-corn-desk-2x_bshxqo.png 2x"
-          media="(min-width: 1440px)" />
+          media="(min-width: 1359px)" />
           <img class="question_image-popcorn" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/qustion-corn-desk-1x_pa5mli.png" alt="corn ready">
         </picture>
         <picture>
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/question-puds-desk-1x_mx36ne.png 1x,
           https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/question-puds-desk-2x_fuepul.png 2x"
-          media="(min-width: 1440px)" />
+          media="(min-width: 1359px)" />
           <img class="question_image-milk" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/question-puds-desk-1x_mx36ne.png" alt="milk puds">
         </picture>
-        <!-- <img src="./images/question_milk.png" alt="milk" class="question_image-milk"> -->
-        <!-- <img src="./images/question_popcorn.png" alt="popcorn salt" class="question_image-popcorn"> -->
       </div>
     </section>
  </main>
@@ -383,7 +372,7 @@
           <svg class="footer__icon" width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-location"></use>
           </svg>
-          <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, </br> вул. Валерія Красняна, 60к</a>
+          <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, вул. Валерія Красняна, 60к</a>
         </li>
         <li class="list footer__information-list">
           <svg class="footer__icon" width="24" height="24">
@@ -410,21 +399,14 @@
 
       <div class="footer__information-item">
         <p class="subtitle white footer__question-subtitle">Маєте запитання чи пропозиції?</p>
-        <p class="text white">Заповніть заявку і ми зв’яжемось з Вами </br>найближчим часом</p>
+        <p class="text white">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</p>
         <button class="button__primary footer__button modal-open">Заповнити заявку</button>
       </div>
     </div>
 
-    <!-- <ul class="footer__conditions-item">
-      <li class="list"><a class="link text grey footer__conditions " href="">Політика конфіденційності</a></li>
-      <li class="list"><a class="link text grey footer__conditions" href="">Договір оферти</a></li>
-      <li class="list"><a class="link text grey footer__conditions" href="">Умови надання послуг</a></li>
-    </ul> -->
-
   </div>
 
 </footer>
-<!-- modal -->
 
 <div class="backdrop is-hidden">
   <div class="modal">
@@ -436,7 +418,7 @@
        </svg>
       </button>
      <form name="question-form" class="question__form" action="https://formspree.io/f/xvoedapk" method="POST"> 
-       <h2 class="title question__title">бажаєте стати партнером</br>або маєте пропозиції?</h2>
+       <h2 class="title question__title">бажаєте стати партнером або маєте пропозиції?</h2>
        <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
         <div class="question__form-container">
           <input class="question__input text black" type="text" name="name" id="name" placeholder="Ваше ім'я" required>
