--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
           </svg>
          </button>
         <form name="question-form" class="question__form" action="https://formspree.io/f/xvoedapk" method="POST"> 
-          <h2 class="title question__title">бажаєте стати партнером</br>або маєте пропозиції?</h2>
+          <h2 class="title question__title">бажаєте стати партнером або маєте пропозиції?</h2>
           <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
            <div class="question__form-container">
              <input class="question__input text black" type="text" name="name" id="name" placeholder="Ваше ім'я" required>
