update pictures for 1360px

--- a/contacts.html
+++ b/contacts.html
@@ -15,11 +15,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tektur:wght@400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/fonts/fonts.css">
-    <!-- <link rel="stylesheet" href="../css/main.min.css"> -->
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-  <!-- <header class="header-container"> -->
     <header class="header header__second">
       <a href="./index.html" class="link"> 
         <svg class="logo" width="80" height="24">
@@ -42,7 +40,6 @@
      </button>
       <button type="button" class="button__primary header__button-second modal-open">Отримати пропозицію</button>
 
-    <!-- </div> -->
  </header>
 
  <main class="container__grey">
@@ -143,7 +140,7 @@
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-location"></use>
             </svg>
-            <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, </br> вул. Валерія Красняна, 60к</a>
+            <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, вул. Валерія Красняна, 60к</a>
           </li>
         </ul>
         <svg class="contacts__icon" >
@@ -174,7 +171,7 @@
           <svg class="footer__icon" width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-location"></use>
           </svg>
-          <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, </br> вул. Валерія Красняна, 60к</a>
+          <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, вул. Валерія Красняна, 60к</a>
         </li>
         <li class="list footer__information-list">
           <svg class="footer__icon" width="24" height="24">
@@ -201,7 +198,7 @@
 
       <div class="footer__information-item">
         <p class="subtitle white footer__question-subtitle">Маєте запитання чи пропозиції?</p>
-        <p class="text white">Заповніть заявку і ми зв’яжемось з Вами </br>найближчим часом</p>
+        <p class="text white">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</p>
         <button class="button__secondary footer__button modal-open">Заповнити заявку</button>
       </div>
     </div>
@@ -228,7 +225,7 @@
        </svg>
       </button>
      <form name="question-form" class="question__form" action="https://formspree.io/f/xvoedapk" method="POST"> 
-       <h2 class="title question__title">бажаєте стати партнером</br>або маєте пропозиції?</h2>
+       <h2 class="title question__title">бажаєте стати партнером aбо маєте пропозиції?</h2>
        <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
         <div class="question__form-container">
           <input class="question__input text black" type="text" name="name" id="name" placeholder="Ваше ім'я" required>
