--- a/partner.html
+++ b/partner.html
@@ -103,7 +103,7 @@
   <section class=" container " >
     <div class="partner__container">
       <h2 class="title partners__title">Станьте нашим партнером сьогодні!</h2>
-      <h3 class="subtitle partners__subtitle">Якщо Ви маєте запитання чи пропозиції - </br>заповніть заявку і ми звяжемось з Вами найближчим часом</h3>
+      <h3 class="subtitle partners__subtitle">Якщо Ви маєте запитання чи пропозиції - заповніть заявку і ми звяжемось з Вами найближчим часом</h3>
       <button type="button" class="button__secondary button__form partners__button modal-open">Стати партнером  
         <svg width="40" height="40" class="hero-svg">
           <use href="./images/symbol-defs.svg#icon-arrow-up-right"></use>
@@ -113,10 +113,10 @@
         <picture>
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/popcorn-desktop-1x-min_tryrzi.png 1x,
           https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/popcorn-desktop-2x-min_hqjytr.png 2x" 
-          media="(min-width: 1440px)" />
+          media="(min-width: 1360px)" />
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070684/apero/be-our-partners/popcorn-tablet-1x-min_yig8q2.png 1x,
           https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070684/apero/be-our-partners/popcorn-tablet-2x-min_rycu8t.png 2x" 
-          media="(min-width: 744px) and (max-width: 1439px)" />
+          media="(min-width: 744px) and (max-width: 1359px)" />
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/popcorn-mob-1x-min_imk6ka.png 1x,
           https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070683/apero/be-our-partners/popcorn-mob-2x-min_plrb7r.png 2x" 
           media="(max-width: 743px)"/>
@@ -126,10 +126,10 @@
         <picture>
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor-desktop-1x-min_kipzwe.png 1x,
           https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor-desktop-2x-min_crnlku.png 2x" 
-          media="(min-width: 1440px)" />
+          media="(min-width: 1360px)" />
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor_-tablet-1x-min_a5fj3z.png 1x,
           https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor-tablet-2x-min_u4hrpx.png 2x" 
-          media="(min-width: 744px) and (max-width: 1439px)" />
+          media="(min-width: 744px) and (max-width: 1359px)" />
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070682/apero/be-our-partners/konstruktor_-mob-1x-min_dss4mb.png 1x,
           https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/konstruktor-mob-2x-min_ekgxbq.png 2x" 
           media="(max-width: 743px)"/>
@@ -139,10 +139,10 @@
         <picture>
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733071294/apero/be-our-partners/bamboo-desktop-1x-min_kcbawd.png 1x,
           https://res.cloudinary.com/ddtdtthqh/image/upload/v1733071294/apero/be-our-partners/bamboo-desktop-2x-min_jhqniv.png 2x" 
-          media="(min-width: 1440px)" />
+          media="(min-width: 1360px)" />
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/bamboo-tablet-1x-min_ic4ham.png 1x,
           https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/bamboo-tablet-2x-min_jb8kif.png 2x" 
-          media="(min-width: 744px) and (max-width: 1439px)" />
+          media="(min-width: 744px) and (max-width: 1599px)" />
           <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/bamboo-mob-1x-min_dw6ici.png 1x,
           https://res.cloudinary.com/ddtdtthqh/image/upload/v1733070681/apero/be-our-partners/bamboo-mob-2x-min_y597k8.png 2x" 
           media="(max-width: 743px)"/>
@@ -178,7 +178,7 @@
           <svg class="footer__icon" width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-location"></use>
           </svg>
-          <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, </br> вул. Валерія Красняна, 60к</a>
+          <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, вул. Валерія Красняна, 60к</a>
         </li>
         <li class="list footer__information-list">
           <svg class="footer__icon" width="24" height="24">
@@ -205,7 +205,7 @@
 
       <div class="footer__information-item">
         <p class="subtitle white footer__question-subtitle">Маєте запитання чи пропозиції?</p>
-        <p class="text white">Заповніть заявку і ми зв’яжемось з Вами </br>найближчим часом</p>
+        <p class="text white">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</p>
         <button class="button__secondary footer__button modal-open">Заповнити заявку</button>
       </div>
     </div>
@@ -232,7 +232,7 @@
        </svg>
       </button>
      <form name="question-form" class="question__form" action="https://formspree.io/f/xvoedapk" method="POST"> 
-       <h2 class="title question__title">бажаєте стати партнером</br>або маєте пропозиції?</h2>
+       <h2 class="title question__title">бажаєте стати партнером або маєте пропозиції?</h2>
        <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
         <div class="question__form-container">
           <input class="question__input text black" type="text" name="name" id="name" placeholder="Ваше ім'я" required>
